Fix practice layout issues

--- a/anatomy/static/sass/_practice.sass
+++ b/anatomy/static/sass/_practice.sass
@@ -107,8 +107,6 @@
     width: 30%
     float: right
   .practice, .summary
-    .col-sm-offset-7
-      margin-left: 0
     .label
       white-space: normal
     min-height: 690px
