--- a/anatomy/static/sass/_responsive.sass
+++ b/anatomy/static/sass/_responsive.sass
@@ -35,8 +35,9 @@
         white-space: initial
         width: 45%
         width: calc(50% - 13px)
+        padding: 3px 1px
     .btn
-      padding: 3px 1px
+      padding: 3px 9px
       font-size: 13.9px
       -webkit-border-radius: 3px
       -moz-border-radius: 3px
@@ -46,7 +47,6 @@
     .question 
       font-size: 16px
       margin: 0
-      padding: 5px 
       span
         float: none
         margin: 0
